edulens-infrastructure/cdk-out-test/EduLensNetworkStack-dev.template.json
{
 "Description": "EduLens Network Infrastructure (dev)",
 "Resources": {
  "EduLensVpcFE86C596": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "edulens-vpc-dev"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/Resource"
   }
  },
  "EduLensVpcPublicSubnet1Subnet70316323": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1/Subnet"
   }
  },
  "EduLensVpcPublicSubnet1RouteTable84CF7897": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1/RouteTable"
   }
  },
  "EduLensVpcPublicSubnet1RouteTableAssociation6C3606FE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EduLensVpcPublicSubnet1RouteTable84CF7897"
    },
    "SubnetId": {
     "Ref": "EduLensVpcPublicSubnet1Subnet70316323"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "EduLensVpcPublicSubnet1DefaultRouteDAEF0F5B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EduLensVpcIGWEB42639E"
    },
    "RouteTableId": {
     "Ref": "EduLensVpcPublicSubnet1RouteTable84CF7897"
    }
   },
   "DependsOn": [
    "EduLensVpcVPCGW8999519F"
   ],
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "EduLensVpcPublicSubnet1EIP18677C14": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1/EIP"
   }
  },
  "EduLensVpcPublicSubnet1NATGateway55206152": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EduLensVpcPublicSubnet1EIP18677C14",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EduLensVpcPublicSubnet1Subnet70316323"
    },
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "DependsOn": [
    "EduLensVpcPublicSubnet1DefaultRouteDAEF0F5B",
    "EduLensVpcPublicSubnet1RouteTableAssociation6C3606FE"
   ],
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet1/NATGateway"
   }
  },
  "EduLensVpcPublicSubnet2SubnetAEB30408": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet2/Subnet"
   }
  },
  "EduLensVpcPublicSubnet2RouteTableAF1FA288": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet2/RouteTable"
   }
  },
  "EduLensVpcPublicSubnet2RouteTableAssociation437ED335": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EduLensVpcPublicSubnet2RouteTableAF1FA288"
    },
    "SubnetId": {
     "Ref": "EduLensVpcPublicSubnet2SubnetAEB30408"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "EduLensVpcPublicSubnet2DefaultRouteFAD0BBF4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EduLensVpcIGWEB42639E"
    },
    "RouteTableId": {
     "Ref": "EduLensVpcPublicSubnet2RouteTableAF1FA288"
    }
   },
   "DependsOn": [
    "EduLensVpcVPCGW8999519F"
   ],
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "EduLensVpcPrivateSubnet1Subnet930754E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet1/Subnet"
   }
  },
  "EduLensVpcPrivateSubnet1RouteTable782792BE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet1/RouteTable"
   }
  },
  "EduLensVpcPrivateSubnet1RouteTableAssociationD9917F8A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EduLensVpcPrivateSubnet1RouteTable782792BE"
    },
    "SubnetId": {
     "Ref": "EduLensVpcPrivateSubnet1Subnet930754E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "EduLensVpcPrivateSubnet1DefaultRouteCD157CE8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EduLensVpcPublicSubnet1NATGateway55206152"
    },
    "RouteTableId": {
     "Ref": "EduLensVpcPrivateSubnet1RouteTable782792BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "EduLensVpcPrivateSubnet2Subnet10075668": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet2/Subnet"
   }
  },
  "EduLensVpcPrivateSubnet2RouteTable518975CF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet2/RouteTable"
   }
  },
  "EduLensVpcPrivateSubnet2RouteTableAssociation59A97E93": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EduLensVpcPrivateSubnet2RouteTable518975CF"
    },
    "SubnetId": {
     "Ref": "EduLensVpcPrivateSubnet2Subnet10075668"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "EduLensVpcPrivateSubnet2DefaultRoute95067627": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EduLensVpcPublicSubnet1NATGateway55206152"
    },
    "RouteTableId": {
     "Ref": "EduLensVpcPrivateSubnet2RouteTable518975CF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "EduLensVpcIsolatedSubnet1Subnet552F580E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet1/Subnet"
   }
  },
  "EduLensVpcIsolatedSubnet1RouteTable3E6D72FC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet1"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet1/RouteTable"
   }
  },
  "EduLensVpcIsolatedSubnet1RouteTableAssociationFA53C667": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EduLensVpcIsolatedSubnet1RouteTable3E6D72FC"
    },
    "SubnetId": {
     "Ref": "EduLensVpcIsolatedSubnet1Subnet552F580E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "EduLensVpcIsolatedSubnet2SubnetEF9AD25F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet2/Subnet"
   }
  },
  "EduLensVpcIsolatedSubnet2RouteTableD59FE197": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet2"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet2/RouteTable"
   }
  },
  "EduLensVpcIsolatedSubnet2RouteTableAssociation2F57B5C1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EduLensVpcIsolatedSubnet2RouteTableD59FE197"
    },
    "SubnetId": {
     "Ref": "EduLensVpcIsolatedSubnet2SubnetEF9AD25F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "EduLensVpcIGWEB42639E": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "edulens-vpc-dev"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/IGW"
   }
  },
  "EduLensVpcVPCGW8999519F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "EduLensVpcIGWEB42639E"
    },
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/VPCGW"
   }
  },
  "EduLensVpcRestrictDefaultSecurityGroupCustomResourceE7E0BAA1": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "EduLensVpcFE86C596",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "534409838809"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/EduLensVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-west-2:534409838809:security-group/",
             {
              "Fn::GetAtt": [
               "EduLensVpcFE86C596",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-534409838809-us-west-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "LambdaSecurityGroup0BD9FC99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Lambda functions",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "edulens-lambda-sg-dev"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/LambdaSecurityGroup/Resource"
   }
  },
  "LambdaSecurityGroupfromEduLensNetworkStackdevAlbSecurityGroupB2E45B16ALLTRAFFIC54985078": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow traffic from ALB",
    "GroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "IpProtocol": "-1",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/LambdaSecurityGroup/from EduLensNetworkStackdevAlbSecurityGroupB2E45B16:ALL TRAFFIC"
   }
  },
  "RdsSecurityGroup632A77E4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS Aurora",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "edulens-rds-sg-dev"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/RdsSecurityGroup/Resource"
   }
  },
  "RdsSecurityGroupfromEduLensNetworkStackdevLambdaSecurityGroup9875383654329CEBA5BD": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow PostgreSQL access from Lambda",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "RdsSecurityGroup632A77E4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/RdsSecurityGroup/from EduLensNetworkStackdevLambdaSecurityGroup98753836:5432"
   }
  },
  "RedisSecurityGroupB05951F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ElastiCache Redis",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "edulens-redis-sg-dev"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/RedisSecurityGroup/Resource"
   }
  },
  "RedisSecurityGroupfromEduLensNetworkStackdevLambdaSecurityGroup98753836637978AA1325": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Redis access from Lambda",
    "FromPort": 6379,
    "GroupId": {
     "Fn::GetAtt": [
      "RedisSecurityGroupB05951F6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 6379
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/RedisSecurityGroup/from EduLensNetworkStackdevLambdaSecurityGroup98753836:6379"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ALB (SSE streaming)",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP from internet",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTPS from internet",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "edulens-alb-sg-dev"
     },
     {
      "Key": "Project",
      "Value": "EduLens"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "EduLensVpcFE86C596"
    }
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/AlbSecurityGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32QwU7DMAyGn2X3NIyIFxgTmnqBqEW7ojQ1xVubVLHdaZr27qQM6AUhRfLvL070JUabh3u9XrkTFb49Fj02+lKz80eV0Rt4oy/70avte9jbrbLS9OhraQLwzJZURWF4dU0PC1/Yhih6dIwx/A7P4am0c3l2vHMMJ3dWNuGU43JxGRhSzj8DN5PvbsNZ9WOAwKoGLwn5vEtRxi+Hf0EZugREV1UBRUk+6whxHJY2a/69ZVOcsIX06AhUfhlw/rAOQzefeREeha8qxBb0ge4mY3Re69WBEIskgXEAXd3qJ1U0iLh+AQAA"
   },
   "Metadata": {
    "aws:cdk:path": "EduLensNetworkStack-dev/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "EduLensVpcFE86C596"
   },
   "Export": {
    "Name": "edulens-vpc-id-dev"
   }
  },
  "VpcCidr": {
   "Description": "VPC CIDR Block",
   "Value": {
    "Fn::GetAtt": [
     "EduLensVpcFE86C596",
     "CidrBlock"
    ]
   }
  },
  "LambdaSecurityGroupId": {
   "Description": "Lambda Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "edulens-lambda-sg-dev"
   }
  },
  "ExportsOutputRefEduLensVpcIsolatedSubnet1Subnet552F580EB9C31932": {
   "Value": {
    "Ref": "EduLensVpcIsolatedSubnet1Subnet552F580E"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcIsolatedSubnet1Subnet552F580EB9C31932"
   }
  },
  "ExportsOutputRefEduLensVpcIsolatedSubnet2SubnetEF9AD25F9AB4F1FC": {
   "Value": {
    "Ref": "EduLensVpcIsolatedSubnet2SubnetEF9AD25F"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcIsolatedSubnet2SubnetEF9AD25F9AB4F1FC"
   }
  },
  "ExportsOutputFnGetAttRdsSecurityGroup632A77E4GroupId9D343172": {
   "Value": {
    "Fn::GetAtt": [
     "RdsSecurityGroup632A77E4",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputFnGetAttRdsSecurityGroup632A77E4GroupId9D343172"
   }
  },
  "ExportsOutputRefEduLensVpcPrivateSubnet1Subnet930754E88F2E6D0A": {
   "Value": {
    "Ref": "EduLensVpcPrivateSubnet1Subnet930754E8"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcPrivateSubnet1Subnet930754E88F2E6D0A"
   }
  },
  "ExportsOutputRefEduLensVpcPrivateSubnet2Subnet100756684A49E0FC": {
   "Value": {
    "Ref": "EduLensVpcPrivateSubnet2Subnet10075668"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcPrivateSubnet2Subnet100756684A49E0FC"
   }
  },
  "ExportsOutputFnGetAttRedisSecurityGroupB05951F6GroupIdECA64B37": {
   "Value": {
    "Fn::GetAtt": [
     "RedisSecurityGroupB05951F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputFnGetAttRedisSecurityGroupB05951F6GroupIdECA64B37"
   }
  },
  "ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7": {
   "Value": {
    "Fn::GetAtt": [
     "AlbSecurityGroup86A59E99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7"
   }
  },
  "ExportsOutputRefEduLensVpcPublicSubnet1Subnet703163237D6AA035": {
   "Value": {
    "Ref": "EduLensVpcPublicSubnet1Subnet70316323"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcPublicSubnet1Subnet703163237D6AA035"
   }
  },
  "ExportsOutputRefEduLensVpcPublicSubnet2SubnetAEB3040895E5F72D": {
   "Value": {
    "Ref": "EduLensVpcPublicSubnet2SubnetAEB30408"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcPublicSubnet2SubnetAEB3040895E5F72D"
   }
  },
  "ExportsOutputFnGetAttLambdaSecurityGroup0BD9FC99GroupId34A98CFB": {
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputFnGetAttLambdaSecurityGroup0BD9FC99GroupId34A98CFB"
   }
  },
  "ExportsOutputRefEduLensVpcFE86C596C598B5DF": {
   "Value": {
    "Ref": "EduLensVpcFE86C596"
   },
   "Export": {
    "Name": "EduLensNetworkStack-dev:ExportsOutputRefEduLensVpcFE86C596C598B5DF"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
